style: fix paddings on mobile

--- a/dockpeek/static/css/styles.css
+++ b/dockpeek/static/css/styles.css
@@ -1123,134 +1123,6 @@ body.dark-mode .column-menu-item span {
   display: none !important;
 }
 
-/* Responsive Styles */
-@media (max-width: 576px) {
-  body {
-    padding: 0;
-  }
-
-  #search-input::placeholder {
-    opacity: 0;
-  }
-
-  .container {
-    padding: 0.5rem;
-  }
-
-  .flex.justify-between.items-center.mb-6 {
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 1rem;
-  }
-
-  .controls-container {
-    flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
-    margin-top: 1rem;
-  }
-
-  .controls-container>* {
-    margin-bottom: 0.5rem;
-    width: 100%;
-  }
-
-  .py-3.px-4 {
-    padding: 0.5rem 0.75rem;
-  }
-
-  .min-w-full {
-    min-width: unset;
-  }
-
-  .overflow-x-auto {
-    /* overflow-x: hidden;*/
-  }
-
-  .update-indicator {
-    display: none;
-  }
-
-  .min-w-full {
-    min-width: 100%;
-  }
-
-}
-
-/* Responsive Styles */
-@media (max-width: 768px) {
-
-  .container {
-    padding: 0.5rem;
-  }
-
-  .column-menu-container {
-    margin-left: 8px;
-  }
-
-  .right-18 {
-    right: calc(var(--spacing) * 14);
-  }
-
-  [data-tooltip-left]::after,
-  [data-tooltip-left]::before,
-  [data-tooltip-right]::after,
-  [data-tooltip-right]::before,
-  [data-tooltip]::after,
-  [data-tooltip]::before {
-    display: none !important;
-    content: none !important;
-  }
-
-  .flex.justify-between.items-center.mb-6 {
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 1rem;
-  }
-
-  .status-filter {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    height: 100%;
-  }
-
-  .column-menu-container {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    height: 100%;
-  }
-
-  .controls-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
-    margin-top: 1rem;
-  }
-
-  .controls-container>* {
-    margin-bottom: 0.5rem;
-    width: 100%;
-  }
-
-  .py-3.px-4 {
-    padding: 0.5rem 0.75rem;
-  }
-
-  .min-w-full {
-    min-width: unset;
-  }
-
-  .min-w-full {
-    min-width: 100%;
-  }
-}
-
 .traefik-route a {
   display: inline-block;
   max-width: 100%;
@@ -1263,32 +1135,6 @@ body.dark-mode .column-menu-item span {
   display: inline;
 }
 
-
-/* domyślnie (dla dużych ekranów) */
-label[for="filter-running-checkbox"] {
-  display: inline;
-}
-
-/* ukryj dla ekranów <= 1023px */
-@media (max-width: 1023px) {
-  label[for="filter-running-checkbox"] {
-    display: none;
-  }
-}
-
-/* przywróć widoczność dla ekranów <= 768px (nadpisze regułę powyżej) */
-@media (max-width: 768px) {
-  label[for="filter-running-checkbox"] {
-    display: inline;
-  }
-}
-
-/* jawne ustawienie dla >= 1024px (opcjonalne, domyślne już to daje) */
-@media (min-width: 1024px) {
-  label[for="filter-running-checkbox"] {
-    display: inline;
-  }
-}
 
 .tag-badge {
   max-width: 120px;
@@ -1507,4 +1353,165 @@ body.dark-mode .single-row-template:hover {
 
 .buycoffe:hover {
   color: #ddab30;
+}
+
+/* Responsive Styles */
+@media (max-width: 576px) {
+  body {
+    padding: 0;
+  }
+
+  #search-input::placeholder {
+    opacity: 0;
+  }
+
+  .container {
+    padding: 0.5rem;
+  }
+
+  .flex.justify-between.items-center.mb-6 {
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 1rem;
+  }
+
+  .controls-container {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    margin-top: 1rem;
+  }
+
+  .controls-container>* {
+    margin-bottom: 0.5rem;
+    width: 100%;
+  }
+
+  .py-3.px-4 {
+    padding: 0.5rem 0.75rem;
+  }
+
+  .min-w-full {
+    min-width: unset;
+  }
+
+  .overflow-x-auto {
+    /* overflow-x: hidden;*/
+  }
+
+  .update-indicator {
+    display: none;
+  }
+
+  .min-w-full {
+    min-width: 100%;
+  }
+
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+
+  .container {
+    padding: 0.5rem;
+  }
+
+  .container-top {
+    padding: 0;
+    padding-top: 0.5rem;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+  }
+
+  .column-menu-container {
+    margin-left: 8px;
+  }
+
+  .right-18 {
+    right: calc(var(--spacing) * 14);
+  }
+
+  [data-tooltip-left]::after,
+  [data-tooltip-left]::before,
+  [data-tooltip-right]::after,
+  [data-tooltip-right]::before,
+  [data-tooltip]::after,
+  [data-tooltip]::before {
+    display: none !important;
+    content: none !important;
+  }
+
+  .flex.justify-between.items-center.mb-6 {
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 1rem;
+  }
+
+  .status-filter {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    height: 100%;
+  }
+
+  .column-menu-container {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    height: 100%;
+  }
+
+  .controls-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    margin-top: 1rem;
+  }
+
+  .controls-container>* {
+    margin-bottom: 0.5rem;
+    width: 100%;
+  }
+
+  .py-3.px-4 {
+    padding: 0.5rem 0.75rem;
+  }
+
+  .min-w-full {
+    min-width: unset;
+  }
+
+  .min-w-full {
+    min-width: 100%;
+  }
+}
+
+/* domyślnie (dla dużych ekranów) */
+label[for="filter-running-checkbox"] {
+  display: inline;
+}
+
+/* ukryj dla ekranów <= 1023px */
+@media (max-width: 1023px) {
+  label[for="filter-running-checkbox"] {
+    display: none;
+  }
+}
+
+/* przywróć widoczność dla ekranów <= 768px (nadpisze regułę powyżej) */
+@media (max-width: 768px) {
+  label[for="filter-running-checkbox"] {
+    display: inline;
+  }
+}
+
+/* jawne ustawienie dla >= 1024px (opcjonalne, domyślne już to daje) */
+@media (min-width: 1024px) {
+  label[for="filter-running-checkbox"] {
+    display: inline;
+  }
 }
